# trikal

./: .env.example  .gitignore  AI_Technical_Manager_Command_Center.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.claude/agents/: ai-rag.md  backend-api.md  database.md  devops.md  diagram-system.md  frontend-ux.md  integration.md  product-strategist.md  security-compliance-qa.md  solution-architect.md
.continue/rules/: development-rule.md
.github/workflows/: backend.yml  frontend.yml
apps/backend/: .env.example  Dockerfile.dev  Dockerfile.prod  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_create_audit_logs.py  0002_create_users.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/routes/: auth.py  health.py  me.py
apps/backend/app/core/: config.py  database.py  dependencies.py  phi_scrubber.py
apps/backend/app/lib/: oidc.py  redis.py
apps/backend/app/middleware/: logging.py
apps/backend/app/models/: audit_log.py  base.py  user.py
apps/backend/app/schemas/: auth.py  user.py
apps/backend/app/services/: audit.py  user.py
apps/backend/app/services/vector/: __init__.py  base.py  qdrant.py
apps/backend/app/utils/: logger.py
apps/backend/scripts/: start.sh
apps/backend/seeds/: runner.py
apps/backend/seeds/data/: 001_initial_data.py
apps/backend/tests/: conftest.py
apps/backend/tests/api/: test_health.py
infrastructure/: docker-compose.prod.yml  docker-compose.yml
(+224 files in other folders)
